# libssh2-nilrt-ipk

./: AUTHORS  CMakeLists.txt  CPackConfig.cmake  LICENSE  README.md
cmake/: External_libssh2.cmake
